--- a/styles.css
+++ b/styles.css
@@ -85,11 +85,17 @@ header p {
     margin: 20px auto 0;
     position: relative;
     z-index: 1;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 15px;
+    padding-top: 15px;
 }
-
 .search-container input {
     width: 100%;
-    padding: 15px 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 15px;
+    padding-top: 15px;
     border: none;
     border-radius: 50px;
     font-size: 1rem;
@@ -114,6 +120,8 @@ header p {
     width: 45px;
     height: 45px;
     cursor: pointer;
+    margin-top: 12px;
+    margin-right: 12px;
     transition: var(--transition);
 }
 
